# elasticpath-shop-bot

./: README.md  elasticpath.py  geocoding.py  pyproject.toml  requirements.txt  run.py  settings.py  setup.cfg  telegram_bot.py
elasticpath/: __init__.py  api.py  models.py
utils/: upload_data.py
